Fix booking link alignment in header in Safari browsers

--- a/web/src/styles/base.scss
+++ b/web/src/styles/base.scss
@@ -106,6 +106,7 @@ button {
   color: inherit;
   border: none;
   padding: 0;
+  margin: 0;
   font: inherit;
   cursor: pointer;
   outline: inherit;
